--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,13 @@
+dependencyResolutionManagement {
+    pluginManagement {
+        versionCatalogs {
+            libs {
+                from(files("../libs.versions.toml"))
+            }
+        }
+    }
+}
+
 rootProject.name = 'memberapi'
 include 'app'
 include 'memberapilib'
