--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
+    testImplementation libs.zonkytest
+//    testImplementation 'io.zonky.test:embedded-postgres:2.0.3'
     testImplementation('com.h2database:h2')
     testImplementation('com.google.code.gson:gson')
     testImplementation(libs.securityapi)
